# market-intelligence-platform

./: .env.example  .gitignore  Dockerfile.api  README.md  alembic.ini  docker-compose.yml  localch_enriched.json  pyproject.toml  searchch_companies.json
alembic/: env.py
alembic/versions/: 001_initial_schema.py
dashboard/: index.html  package.json  tsconfig.json  vite.config.ts
dashboard/src/: App.vue
dashboard/src/api/: client.ts
dashboard/src/components/: CompanyFilters.vue  CompanyTable.vue  LeadStatusBadge.vue  StatsCards.vue
dashboard/src/router/: index.ts
dashboard/src/types/: company.ts
dashboard/src/views/: CompaniesView.vue  CompanyDetailView.vue  DashboardView.vue  LeadsView.vue
scripts/: enrich_from_localch.py  run_ingestion.py  scrape_searchch_local.py  seed_noga_codes.py
src/: config.py  database.py  main.py
src/api/: companies.py  ingestion.py  leads.py  search.py
src/models/: __init__.py  campaign.py  company.py  contact.py  enrichment.py  lead.py  source.py
src/repositories/: company_repository.py  lead_repository.py  source_repository.py
src/scheduler/: jobs.py
src/schemas/: company.py  lead.py  search.py
src/services/classification/: industry_classifier.py
src/services/enrichment/: website_scraper.py
src/services/ingestion/: localch_client.py  localch_ingestion.py  searchch_client.py  searchch_ingestion.py  uid_client.py  zefix_client.py  zefix_ingestion.py
src/services/matching/: deduplication.py
src/services/scoring/: lead_scorer.py
